# machinetTestTask

./: README.md  Taskfile.yaml  pyproject.toml
.github/workflows/: workflows.yml
machinettesttask/: __init__.py  app.py
machinettesttask/templates/: index.html
