[tool.poetry]
name = "machinettesttask"
version = "0.1.0"
description = ""
authors = ["Egor251 <egorpyshny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-socketio = "^5.3.6"
autoflake = "^2.3.1"
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
